<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.henkexbg</groupId>
	<artifactId>gallery-api</artifactId>
	<version>1.2.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>Gallery API</name>
	<url>https://github.com/henkexbg/gallery-api</url>
	<description>REST Webapp in Java for viewing a gallery of images and videos. Image rescaling as well as video transcoding is performed based on request parameters. No UI included. Purely API-based. Authentication via HTTP basic auth (per default). Supports different user roles.</description>

	<developers>
		<developer>
			<name>Henrik Bjerne</name>
			<url>https://github.com/henkexbg</url>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.1</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-compiler-plugin</artifactId>-->
<!--				<version>3.12.1</version>-->
<!--				<configuration>-->
<!--					<source>21</source>-->
<!--					<target>21</target>-->
<!--					<enablePreview>true</enablePreview>-->
<!--					<compilerArgs>-->
<!--						<arg>&#45;&#45;enable-preview</arg>-->
<!--						<arg>&#45;&#45;add-modules=jdk.incubator.concurrent</arg>-->
<!--					</compilerArgs>-->
<!--				</configuration>-->
<!--			</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<addResources>true</addResources>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
<!--			<version>3.0.2</version>-->
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.im4java</groupId>
			<artifactId>im4java</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-core</artifactId>
			<version>3.7.0</version>
		</dependency>
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-jpeg</artifactId>
			<version>3.7.0</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.15</version>
		</dependency>
		<dependency>
			<groupId>com.github.mjeanroy</groupId>
			<artifactId>exiftool-lib</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.9.0</version>
		</dependency>
		<dependency>
			<groupId>io.methvin</groupId>
			<artifactId>directory-watcher</artifactId>
			<version>0.18.0</version>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>org.xerial</groupId>-->
<!--			<artifactId>sqlite-jdbc</artifactId>-->
<!--			<version>3.46.0.0</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.jooq</groupId>-->
<!--			<artifactId>jooq</artifactId>-->
<!--			<version>3.19.9</version>-->
<!--		</dependency>-->
		<!-- https://mvnrepository.com/artifact/org.orbisgis/h2gis -->
<!--		<dependency>-->
<!--			<groupId>org.orbisgis</groupId>-->
<!--			<artifactId>h2gis-ext</artifactId>-->
<!--			<version>2.2.1</version>-->
<!--		</dependency>-->

		<!-- https://mvnrepository.com/artifact/org.jdbi/jdbi3-sqlobject -->
		<dependency>
			<groupId>org.jdbi</groupId>
			<artifactId>jdbi3-sqlobject</artifactId>
			<version>3.49.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jdbi/jdbi3-postgis -->
		<dependency>
			<groupId>org.jdbi</groupId>
			<artifactId>jdbi3-postgis</artifactId>
			<version>3.49.5</version>
		</dependency>
		<dependency>
			<groupId>org.orbisgis</groupId>
			<artifactId>h2gis</artifactId>
			<version>2.2.3</version>
<!--			<type>bundle</type>-->
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>

	</dependencies>

	<scm>
		<connection>scm:git:https://github.com/henkexbg/gallery-api.git</connection>
		<developerConnection>scm:git:https://github.com/henkexbg/gallery-api.git</developerConnection>
		<url>https://github.com/henkexbg/gallery-api</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

</project>